descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2012-07-XX  Release 7.22.2                                     ---
----------------------------------------------------------------------

* fixed asc2g and mged empty revolve object crashes - Sean Morrison
* fixed crash when parsing invalid shader parameters - Cliff Yapp
* fixed mged 'dbupgrade' -permissions error on windows - Sean Morrison
* fixed infinite loop raytracing subtracted lights - Sean Morrison
* added hyp centroid and volume output to 'analyze' - Aaron Keesing
* fixed random number SMP bug affecting rt and adrt - Sean Morrison
* added support for editing 2D sketch objects in archer - Bob Parker
* fixed File->New deprecation error in archer - Sean Morrison
* improved Linux platform application and file icons - Jordi Sayol
* quell pix-png gAMA chunk warning defaulting to unset - Sean Morrison
* fixed mged interactive object translation keypoint bug - Bob Parker
* fixed corrupted tessellation pipe export bug - Richard Weiss
* output from g-var no longer prints 'fwrite' messages - Sean Morrison
* fixed crash in step-g tool importing AP214 entities - Sean Morrison
* improved 3dm-g output and invalid geometry support - Sean Morrison
* fixed crash revolving empty sketch objects - Sean Morrison
* fixed TIE raytracing bugs shotlining plate-mode BoTs - Sean Morrison
* g_diff gives non-zero return code if .g files differ - Sean Morrison
* fixed typographical errors in numerous tools and docs - Carl Moore
* fixed TIE perpendicular face mesh evaluation failure - Richard Weiss


----------------------------------------------------------------------
--- 2012-06-25  Release 7.22.0                                     ---
----------------------------------------------------------------------

After many months of development, this release includes hundreds of